style: add responsiveness to site using media queries

--- a/styles/main.css
+++ b/styles/main.css
@@ -13,20 +13,19 @@ body {
 #top-header {
   color: #f9faf8;
   background-color: #1f2937;
-  padding: 16px 64px;
+  padding: 16px 100px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  align-content: space-between;
 }
 
 #top-header #logo {
-  flex: 1 1 200px;
+  flex-basis: 200px;
 }
 
 #links {
-  padding: 16px;
+  padding: 16px 16px 16px 0;
   display: flex;
   gap: 20px;
 }
@@ -44,18 +43,17 @@ body {
 }
 
 #welcome {
-  padding: 120px 64px;
+  padding: 120px;
   display: flex;
+  gap: 3rem;
   justify-content: space-between;
-  align-items: start;
-  gap: 50px;
+  align-items: center;
   color: #f9faf8;
   background-color: #1f2937;
-  text-justify: newspaper;
 }
 
 #welcome article {
-  flex-basis: 25rem;
+  flex: 0 0 25rem;
 }
 
 #welcome > article h2 {
@@ -68,8 +66,13 @@ body {
   padding: 16px 0;
 }
 
+#hero-image {
+  flex: 1 1 300px;
+}
+
 #hero-image img {
-  max-height: 300px;
+  width: 100%;
+  height: auto;
 }
 
 #welcome button {
@@ -134,8 +137,6 @@ body {
 #quote-text {
   color: #1f2937;
   background-color: rgb(235, 234, 234);
-  display: flex;
-  flex-direction: column;
   padding: 100px 200px;
   font-size: 36px;
   font-weight: light;
@@ -171,6 +172,7 @@ footer {
 }
 
 #signup-guide button {
+  margin-top: 2rem;
   background-color: #3882f6;
   color: #f9faf8;
   border: 3px solid #f9faf8;
@@ -184,4 +186,30 @@ footer {
   color: #3882f6;
   background-color: #f9faf8;
   border-color: #f9faf8;
+}
+
+@media (max-width: 800px) {
+  #welcome {
+    background-image: url("../images/hero-image-comp.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    text-shadow: 2px 2px 5px black;
+    background-blend-mode: overlay;
+  }
+
+  #welcome figure img {
+    display: none;
+  }
+
+  #quote-text {
+    padding: 50px;
+  }
+}
+
+@media (max-width: 554px) {
+  #info figure {
+    display: flex;
+    gap: 1.4rem;
+  }
 }
