--- a/styles/main.css
+++ b/styles/main.css
@@ -7,7 +7,6 @@
 
 html,
 body {
-  height: 100vh;
   overflow-x: hidden;
   scroll-behavior: smooth;
 }
@@ -91,11 +90,17 @@ body {
   transition: 0.25s;
 }
 
-#scroll-box {
+#scrollbox {
+  display: inline-block;
   margin: 1.25rem 0;
-  background-color: #e5e7eb !important;
-  color: #3882f6 !important;
+  background-color: #e5e7eb;
+  color: #3882f6;
   opacity: 0.75;
+  padding: 0.5rem 2rem;
+  font-weight: bold;
+  border-radius: 5px;
+  text-decoration: none;
+  font-size: small;
 }
 
 #welcome button:hover {
@@ -103,7 +108,7 @@ body {
   background-color: #f9faf8;
 }
 
-#scroll-box:hover {
+#scrollbox:hover {
   opacity: 1;
 }
 
@@ -213,6 +218,12 @@ footer {
     background-attachment: fixed;
     text-shadow: 2px 2px 5px black;
     background-blend-mode: overlay;
+  }
+
+  #scrollbox,
+  #welcome button {
+    text-decoration: none;
+    text-shadow: none;
   }
 
   #welcome figure {
